--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "prebundle": "npm run clean",
     "serve": "bash bin/build-dev.sh",
     "build": "bash bin/build.sh",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "lint": "eslint . --ext .vue,.js,.cjs,.ts --ignore-path .gitignore --fix"
   },
   "source": [
     "index.html"
@@ -19,8 +20,14 @@
   },
   "devDependencies": {
     "@parcel/transformer-vue": "^2.5.0",
+    "@rushstack/eslint-patch": "^1.1.3",
     "@types/node": "^17.0.31",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^10.0.0",
+    "eslint": "^8.15.0",
+    "eslint-plugin-vue": "^8.7.1",
     "parcel": "^2.5.0",
+    "prettier": "2.6.2",
     "typescript": "~4.6.3"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
