--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "vue-parcel-boilerplate",
   "version": "1.0.0",
   "scripts": {
-    "dev": "npm run clean && parcel --no-source-maps",
-    "bundle": "parcel build --no-source-maps",
+    "serve": "npm run clean && parcel --no-source-maps",
+    "bundle": "vue-tsc --noEmit && parcel build --no-source-maps",
     "prebundle": "npm run clean",
-    "serve": "bash bin/build-dev.sh",
+    "dev": "bash bin/build-dev.sh",
     "build": "bash bin/build.sh",
     "clean": "rm -rf dist",
     "lint": "eslint . --ext .vue,.js,.cjs,.ts --ignore-path .gitignore --fix"
@@ -28,7 +28,8 @@
     "eslint-plugin-vue": "^8.7.1",
     "parcel": "^2.5.0",
     "prettier": "2.6.2",
-    "typescript": "~4.6.3"
+    "typescript": "~4.6.3",
+    "vue-tsc": "^0.34.11"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
